--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -19,8 +19,6 @@ body {
     background-color: gray;
 }
 
-row {
-    }
 
 a { 
     text-shadow: 0px;
@@ -154,6 +152,10 @@ a {
     color:white;
     padding: 15px 25px 15px 25px;
     border-radius: 3px;
+    z-index:1000;
+    position: fixed;
+	top: 40%;
+	left: 45%;
 }
 
 #click-cancel{
@@ -161,14 +163,17 @@ a {
     color:white;
     padding: 15px 25px 15px 25px;
     border-radius: 3px;
+    z-index:1000;
+    position: fixed;
+	top: 40%;
+	left: 45%;
 }
 
 .main_head {
-    background-color:white;
-    color: rgb(100,100,100);
+    color: white;
+    font-size: 20px;
     text-align: center;
-    padding:30px;
-    
+    padding: 0px;
     }
 
 /* --------------mypage-------------- */
@@ -202,9 +207,10 @@ a {
 }
 
 .profile_bg {
+    margin-top:50px;
     z-index:1;
     background-color: rgb(100,100,100);
-    padding: 50px;
+    padding: 30px;
     
 }
 /*
@@ -271,10 +277,6 @@ a {
     background-color: rgb(220,220,220);
     padding: 30px 50px 10px 50px;
 }
-
-.first_div{
-    margin-top:300px;
-    } 
 
 .product_div{
     padding: 30px;
@@ -355,6 +357,9 @@ a {
    
 
 .dropdown{
+     margin-top: 20%;
+     margin-bottom: -13%;
+     margin-left: 21%;
      border-radius: 2px;
      color:white;
      background-color:#c0c0c0;
@@ -364,6 +369,16 @@ a {
 .drop{
     text-align:center;
 }
+
+.dropdown-menu{
+    width:150px;
+}
+
+.e_first_div{
+    margin-top: 10%;
+    } 
+
+
 
 
 *,
