--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -19,7 +19,6 @@ body {
     background-color: gray;
 }
 
-
 a { 
     text-shadow: 0px;
     }
@@ -31,12 +30,14 @@ a {
 .container-fluid-pink {
 	background-color: rgb(255,183,172);
 	color: white;
-	height:100%;}
+	height:100%;
+	}
+	
 
 .main_logo {
     position:absolute;
     width: 100%;
-    z-index:1000;
+    z-index:999;
 }
 
 .bg_logo {
@@ -47,16 +48,126 @@ a {
 .home_logo {
     position:fixed;
     width: 200px;
-    z-index:99999;
+    z-index:9999;
     left:20px;
+    }
+    
+.home_logo2 {
+    width: 100%;
+    padding-left: 30px;
     }
 
 .img_bg{
-    z-index:999;
-	position:absolute;
-	height: 100%;
-	overflow: hidden;
+  background-image: url(asset-path('bg.png'));
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  position: relative;
+  top: -100px ;
+  margin: auto;
+  z-index: 1;
+  width: 1680px;
+  height: 1200px;
+  display: block;
+  }
+  
+
+#wrapper{
+  position: relative;
+  width: 100%;
+  overflow: hidden;
 }
+
+.img_bg2 {
+  z-index: 1;
+  overflow: hidden;
+  }
+
+.bg_crop {
+  text-align: center;
+  width: 100%;
+  height: 300px;
+  padding: 0px;
+  overflow : hidden;
+  position: absolute;
+  }
+
+.eval_head {
+  margin-top: 120px;
+  }
+  
+
+.main_p{
+    width: 100%;
+    font-family: 'Asap', sans-serif;
+    display: inline;
+    position: absolute;
+    z-index:9999;
+    color:white;
+    font-size:20px;
+    text-align: center;
+    top: 77%;
+}
+
+.main_p a{
+    color:white;
+}
+.foot_p{
+    font-family: 'Asap', sans-serif;
+    z-index:9999;
+    position:relative;
+    color:white;
+    font-size:20px;
+    display:inline;
+    margin-top:8%;
+}
+
+.foot_t{
+    font-family: 'Asap', sans-serif;
+    z-index:9999;
+    position:relative;
+    color:white;
+    font-size:14px;
+    display:inline;
+    margin-top:8%;
+}
+
+
+div.a {
+        margin: auto;
+        width: 500px;
+        height: 2000px;
+        border: 1px solid #bcbcbc;
+        z-index:9999;
+      }
+     
+a.top {
+        position: fixed;
+        left: 50%;
+        bottom: 50px;
+        display: none;
+        z-index:9999;
+      }
+      
+      
+.main_img_1{
+    width:110%;
+    position: relative;
+    margin-left:-5%;
+    margin-top:5%;
+}
+
+
+.about_text_2{
+    position:absolute;
+    margin-top:15%;
+    margin-left:70%;
+    color: white;
+    font-size:16px;
+    z-index:9999;
+    }
+
+
+
 
 /* --------------log in-------------- */
 .row-high {
@@ -207,6 +318,7 @@ a {
 }
 
 .profile_bg {
+    height: 200px;
     margin-top:50px;
     z-index:1;
     background-color: rgb(100,100,100);
@@ -220,6 +332,52 @@ a {
     overflow: hidden;
 }*/
 
+.profile_l {
+    margin: 0px;
+    height: 50px;
+    border-radius:  25px 0 0 25px ;
+    background: rgb(255,183,172);
+    padding: 12px 0px 5px 10px;
+    font-size: 22px;
+    }
+    
+.profile_c {
+    margin: 0px;
+    height: 50px;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffb7ac+21,00bdd4+100 */
+    background: rgb(255,183,172); /* Old browsers */
+    background: -moz-linear-gradient(left,  rgb(255,183,172) 21%, rgb(0,189,212) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(21%,rgb(255,183,172)), color-stop(100%,rgb(0,189,212))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* IE10+ */
+    background: linear-gradient(to right,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb7ac', endColorstr='#00bdd4',GradientType=1 ); /* IE6-9 */
+    }
+    
+.profile_r {
+    margin: 0px;
+    height: 50px;
+    border-radius:  0 25px 25px 0 ;
+    background: rgb(0,189,212);
+    padding: 12px 15px 5px 0px;
+    font-size: 20px;
+    }
+    
+.profile_lcr {
+    margin: 60px 0 60px 0;
+    text-align:center;
+    }    
+    
+.profile_lcr_a {
+    margin: 0px;
+    z-index: 999;
+    position: absolute;
+    text-align :center;
+    padding: 0 38% 0 38%;
+    }
+
+
 #navbar {
     margin:0px;
     padding:0px;
@@ -228,15 +386,16 @@ a {
 }
 
 .nav-top {
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffb7ac+0,73e5d0+100 */
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffb7ac+21,00bdd4+100 */
     background: rgb(255,183,172); /* Old browsers */
-    background: -moz-linear-gradient(left,  rgb(255,183,172) 0%, rgb(115,229,208) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgb(255,183,172)), color-stop(100%,rgb(115,229,208))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(left,  rgb(255,183,172) 0%,rgb(115,229,208) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(left,  rgb(255,183,172) 0%,rgb(115,229,208) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(left,  rgb(255,183,172) 0%,rgb(115,229,208) 100%); /* IE10+ */
-    background: linear-gradient(to right,  rgb(255,183,172) 0%,rgb(115,229,208) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb7ac', endColorstr='#73e5d0',GradientType=1 ); /* IE6-9 */
+    background: -moz-linear-gradient(left,  rgb(255,183,172) 21%, rgb(0,189,212) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(21%,rgb(255,183,172)), color-stop(100%,rgb(0,189,212))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* IE10+ */
+    background: linear-gradient(to right,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb7ac', endColorstr='#00bdd4',GradientType=1 ); /* IE6-9 */
+
     color: white;
     }
     
@@ -270,15 +429,13 @@ a {
     color: white;
 }
 
-
-
-.reco{
+.reco {
     height: 100%;
     background-color: rgb(220,220,220);
     padding: 30px 50px 10px 50px;
 }
 
-.product_div{
+.product_div {
     padding: 30px;
 }
 
@@ -307,15 +464,15 @@ a {
     text-align:center;
     padding:5px;
     height: 100%;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffb7ac+0,73e5d0+100 */
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffb7ac+21,00bdd4+100 */
     background: rgb(255,183,172); /* Old browsers */
-    background: -moz-linear-gradient(left,  rgb(255,183,172) 0%, rgb(115,229,208) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgb(255,183,172)), color-stop(100%,rgb(115,229,208))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(left,  rgb(255,183,172) 0%,rgb(115,229,208) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(left,  rgb(255,183,172) 0%,rgb(115,229,208) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(left,  rgb(255,183,172) 0%,rgb(115,229,208) 100%); /* IE10+ */
-    background: linear-gradient(to right,  rgb(255,183,172) 0%,rgb(115,229,208) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb7ac', endColorstr='#73e5d0',GradientType=1 ); /* IE6-9 */
+    background: -moz-linear-gradient(left,  rgb(255,183,172) 21%, rgb(0,189,212) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(21%,rgb(255,183,172)), color-stop(100%,rgb(0,189,212))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* IE10+ */
+    background: linear-gradient(to right,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb7ac', endColorstr='#00bdd4',GradientType=1 ); /* IE6-9 */
     color: white;
 }
 
@@ -354,7 +511,6 @@ a {
       overflow: hidden;
       text-overflow: ellipsis;
 }
-   
 
 .dropdown{
      margin-top: 20%;
@@ -377,11 +533,67 @@ a {
 .e_first_div{
     margin-top: 10%;
     } 
+    
+.s_crop {
+  text-align: center;
+  height: 400px;
+  padding: 0px;
+  overflow : hidden;
+  position: absolute;
+  }    
+    
+.season {
+  width:100%;
+  z-index: 1;
+  overflow: hidden;
+  }
 
+/************************* about ************************/
+.about_div{
+    height: 400px;
+    background: rgb(255,183,172); /* Old browsers */
+    background: -moz-linear-gradient(left,  rgb(255,183,172) 21%, rgb(0,189,212) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(21%,rgb(255,183,172)), color-stop(100%,rgb(0,189,212))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* IE10+ */
+    background: linear-gradient(to right,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb7ac', endColorstr='#00bdd4',GradientType=1 ); /* IE6-9 */
+    }
 
+.about_text{
+    color: rgb(100,100,100);
+    padding: 10 30px 0 30px;
+    }
 
+.logo_2 {
+    width: 230px;
+    padding: 10px 0px 5px 50px;
+    }
+    
+.col-md-12 .about_btn {
+    width: 200px;
+    text-align: center;
+    margin: 50px 0px 0px 15px;
+    border: 2px solid rgb(0,189,212);
+    color: rgb(100,100,100);
+    padding: 10px;
+    }
 
-*,
+.col-md-12 a:hover .about_btn  {
+    border: 2px solid white;
+   color: white;
+   background: rgb(255,183,172); /* Old browsers */
+    background: -moz-linear-gradient(left,  rgb(255,183,172) 21%, rgb(0,189,212) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(21%,rgb(255,183,172)), color-stop(100%,rgb(0,189,212))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* IE10+ */
+    background: linear-gradient(to right,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb7ac', endColorstr='#00bdd4',GradientType=1 ); /* IE6-9 */
+    }
+
+*,s
 *:after,
 *:before {
   -webkit-box-sizing: border-box;
@@ -438,4 +650,54 @@ a {
     width: 30px;
     height: 30px;
     margin-top: -20px;
+}
+
+.progressbar-custom{
+
+  float: left;
+  width: 0;
+  height: 100%;
+  font-size: 12px;
+  line-height: 20px;
+  color: #fff;
+  text-align: center;
+  background: -webkit-linear-gradient(left, rgb(255,183,172), rgb(0,189,212)); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(right, rgb(255,183,172), rgb(0,189,212)); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(right, rgb(255,183,172), rgb(0,189,212)); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to right, rgb(255,183,172), rgb(0,189,212)); /* Standard syntax */
+}
+
+.progress-custom{
+    
+  width: 50%;
+  height: 30px;
+  margin: 10px auto 10px;
+  overflow: hidden;
+  background-color: #f5f5f5;
+  border-radius: 20px;
+  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
+          box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
+}
+
+.rate{
+    padding: 12px 2px 0px 2px;
+    font-size: 12px;
+    text-align:center;
+    color:rgb(100,100,100) ;
+}
+
+.smellow-rate{
+    background-image: url(asset-path('heart_empty.png'));
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    margin: 12px 2px 0px 2px;
+    text-align:center;
+    color:rgb(100,100,100) ;
+}
+
+.smellow-rate-hover{
+    background-image: url(asset-path('heart_fill.png'));
 }
